--- a/newdashboard.html
+++ b/newdashboard.html
@@ -72,17 +72,23 @@
   <div class="box">
     <img src="live2.png">
     <h2>Real Time Stock Prices</h2>
-    <a href="real_time_stock_prices_page.html">View Details</a>
+    <a href="https://github.com/Ashritha3105/MINI-PROJECT/blob/main/REALTIME.ipynb" target="_blank">View Details</a>
   </div>
   <div class="box">
     <img src="value.png">
     <h2>Value at Risk</h2>
-    <a href="value_at_risk_page.html">View Details</a>
+    
+<a href="https://github.com/Ashritha3105/MINI-PROJECT/blob/main/VaR.ipynb" target="_blank">View Details</a>
+
   </div>
   <div class="box">
     <img src="optimization.png">
     <h2>Portfolio Optimization</h2>
-    <a href="portfolio_optimization_page.html">View Details</a>
+ <a href="https://github.com/Ashritha3105/MINI-PROJECT/blob/main/MarkovitzPortfolio.ipynb" target="_blank">Markovitz Portfolio</a>
+<a href="https://github.com/Ashritha3105/MINI-PROJECT/blob/main/Mean%20Variance%20Theory.ipynb" target="_blank">Mean Variance Theory</a>
+<a href="https://github.com/Ashritha3105/MINI-PROJECT/blob/main/sharpe%20ratio.ipynb" target="_blank">Sharpe Ratio</a>
+
+
   </div>
 </div>
 </body>
